# linux-do-py

./: README.md  pyproject.toml
src/linux_do_py/: api.py  cli.py
tests/: test_api.py  test_cli.py
